--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:exported="false"
             android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
-            android:name=".applicationMain.StartUpHelpActvity"
+            android:name=".applicationMain.StartUpHelpActivity"
             android:exported="false" />
         <activity
             android:name=".commands.netutils.PingActivity"
