add accent color changing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,20 +36,29 @@
             />
         <activity
             android:name=".applicationMain.PreferencesCustomWebActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".applicationMain.PreferencesEachURLActivity"
             android:exported="false"
-            android:windowSoftInputMode="stateVisible|adjustResize" />
+            android:windowSoftInputMode="stateVisible|adjustResize"
+            />
+        <activity
+            android:name=".applicationMain.PreferencesAccentColorActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".applicationMain.StartUpHelpActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".commands.netutils.PingActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".commands.netutils.Ping6Activity"
-            android:exported="false" />
+            android:exported="false"
+            />
 
         <receiver android:name=".applicationMain.BootReceiver">
             <intent-filter>
