--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,4 +23,12 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build bundleRelease
+
+    - name: Save artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: bluelineconsole_github
+        path: |
+          app/build/outputs/**/*.apk
+          app/build/outputs/**/*.aab
