--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /.idea/compiler.xml
 /.idea/jarRepositories.xml
 /.idea/deploymentTargetDropDown.xml
+/.idea/misc.xml
+/.idea/vcs.xml
 .DS_Store
 /build
 /captures
