--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    // Before updating buildToolsVersion or compileSdkVersion, check for MainActivity.onCreate,
+    // as it uses workaround that depends SDK implementation.
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
 
@@ -31,6 +33,6 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     // implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
