--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:label="@string/app_name"
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
-            android:launchMode="singleTask"
+            android:launchMode="singleInstance"
             android:stateNotNeeded="true"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateAlwaysVisible|adjustResize">
@@ -40,7 +40,7 @@
             android:label="@string/app_name"
             android:clearTaskOnLaunch="true"
             android:excludeFromRecents="true"
-            android:launchMode="singleTask"
+            android:launchMode="singleInstance"
             android:stateNotNeeded="true"
             android:theme="@style/AppThemeHome"
             android:windowSoftInputMode="stateAlwaysVisible|adjustResize">
