Add shortcut widget
This adds a widget that opens Blue Line Console, which is almost just a
big icon.

Not widget host, just adding a widget.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,14 @@
             android:theme="@style/AppTheme"
             />
 
+        <receiver android:name=".widget.LauncherWidgetProvider"
+            android:label="@string/widget_launcher_label"
+            >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/launcher_widget_info" />
+        </receiver>
         <receiver android:name=".applicationMain.BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -136,5 +144,4 @@
             </intent-filter>
         </receiver>
     </application>
-
 </manifest>
