--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ android {
     compileSdkVersion 30
     buildToolsVersion '30.0.2'
 
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
+
     defaultConfig {
         applicationId "net.nhiroki.bluelineconsole"
         minSdkVersion 22
@@ -30,9 +33,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.preference:preference:1.1.1'
-    // implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    // implementation 'com.google.android.material:material:1.2.1'
+
     testImplementation 'junit:junit:4.13'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
