Add license and package check

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build bundleRelease
+    - name: License check
+      run: ./ci/license-checker.py
 
     - name: Save artifacts
       uses: actions/upload-artifact@v2
