Update JDK for GitHub Action build to 11
Recent gradle required JDK11.

--- a/.github/workflows/android-connectedcheck.yml
+++ b/.github/workflows/android-connectedcheck.yml
@@ -19,6 +19,13 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: gradle
+
       - name: Android Emulator Runner
         uses: ReactiveCircus/android-emulator-runner@v2.20.0
         with:
