--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'org.mvel:mvel2:2.4.14.Final'
 
     testImplementation 'junit:junit:4.13.2'
 
