--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+# Note: modified this file after auto-generating from template.
 # This file is a template, and might need editing before it works on your project.
 # To contribute improvements to CI/CD templates, please follow the Development guide at:
 # https://docs.gitlab.com/ee/development/cicd/templates.html
@@ -7,29 +8,29 @@
 # Read more about this script on this blog post https://about.gitlab.com/2018/10/24/setting-up-gitlab-ci-for-android-projects/, by Jason Lenny
 # If you are interested in using Android with FastLane for publishing take a look at the Android-Fastlane template.
 
-image: openjdk:11-jdk
+image: ubuntu:20.04
 
 variables:
 
   # ANDROID_COMPILE_SDK is the version of Android you're compiling with.
   # It should match compileSdkVersion.
-  ANDROID_COMPILE_SDK: "29"
+  ANDROID_COMPILE_SDK: "31"
 
   # ANDROID_BUILD_TOOLS is the version of the Android build tools you are using.
   # It should match buildToolsVersion.
-  ANDROID_BUILD_TOOLS: "29.0.3"
+  ANDROID_BUILD_TOOLS: "31.0.0"
 
   # It's what version of the command line tools we're going to download from the official site.
   # Official Site-> https://developer.android.com/studio/index.html
   # There, look down below at the cli tools only, sdk tools package is of format:
   #        commandlinetools-os_type-ANDROID_SDK_TOOLS_latest.zip
   # when the script was last modified for latest compileSdkVersion, it was which is written down below
-  ANDROID_SDK_TOOLS: "6514223"
+  ANDROID_SDK_TOOLS: "8092744"
 
 # Packages installation before running script
 before_script:
-  - apt-get --quiet update --yes
-  - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
+  - apt --quiet update --yes
+  - apt --quiet install --yes wget tar unzip lib32stdc++6 lib32z1 xxd libgl1 openjdk-11-jdk python3
 
   # Setup path as android_home for moving/exporting the downloaded sdk into it
   - export ANDROID_HOME="${PWD}/android-home"
@@ -44,7 +45,7 @@ before_script:
   - pushd $ANDROID_HOME
   - unzip -d cmdline-tools cmdline-tools.zip
   - popd
-  - export PATH=$PATH:${ANDROID_HOME}/cmdline-tools/tools/bin/
+  - export PATH=$PATH:${ANDROID_HOME}/cmdline-tools/cmdline-tools/bin/:${ANDROID_HOME}/platform-tools/
 
   # Nothing fancy here, just checking sdkManager version
   - sdkmanager --version
@@ -55,30 +56,88 @@ before_script:
   - sdkmanager --sdk_root=${ANDROID_HOME} "platform-tools"
   - sdkmanager --sdk_root=${ANDROID_HOME} "build-tools;${ANDROID_BUILD_TOOLS}"
 
-  # Not necessary, but just for surity
-  - chmod +x ./gradlew
-
-# Basic android and gradle stuff
-# Check linting
-lintDebug:
-  interruptible: true
-  stage: build
-  script:
-    - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
-
-# Make Project
-assembleDebug:
-  interruptible: true
-  stage: build
-  script:
-    - ./gradlew assembleDebug
-  artifacts:
-    paths:
-      - app/build/outputs/
-
-# Run all tests, if any fails, interrupt the pipeline(fail it)
-debugTests:
+test:
   interruptible: true
   stage: test
+  timeout: 60 minutes
   script:
-    - ./gradlew -Pci --console=plain :app:testDebug
+    - sed -i -e 's/        versionName "\(.*\)"/        versionName "\1-'$(date +%Y.%m%d.%H%M)'-'$(git rev-parse --short HEAD)'"/' app/build.gradle
+
+    - ./ci/gitlab-ci-version-check.sh
+    - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
+    - ./gradlew build bundleRelease
+    - ./ci/license-checker.py
+
+    # x86 image is not provided for 30 or later, but at least on my end x86_64 image could not run on emulator command
+    - sdkmanager platform-tools emulator "system-images;android-29;default;x86"
+    - echo no | avdmanager create avd -f -n vm29 -k "system-images;android-29;default;x86"
+    - ${ANDROID_HOME}/emulator/emulator -avd vm29 -no-window -no-audio &
+    - EMULATOR_PID=$!
+    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim ; then break ; fi; sleep 5; done
+    - adb -e shell getprop init.svc.bootanim
+    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim | grep stopped ; then break ; fi; sleep 5; done
+    - adb -e shell getprop init.svc.bootanim | grep stopped
+    - for i in $(seq 60); do if adb -e shell pm list packages ; then break ; fi; sleep 5; done
+    - adb -e shell pm list packages
+    - for i in $(seq 10); do if adb -e shell input keyevent 82 ; then break; fi; sleep 5; done  # unlock device
+    - for i in $(seq 24); do if adb -e shell dumpsys power | grep mHoldingWakeLockSuspendBlocker=true ; then break; fi; sleep 5; done
+    - sleep 10
+    - ./gradlew connectedCheck
+    - kill $EMULATOR_PID
+    - while test -e /proc/$EMULATOR_PID; do sleep 1; done
+    - avdmanager delete avd -n vm29
+
+    # Minimum supported version: SDK22
+    - sdkmanager platform-tools emulator "system-images;android-22;default;x86"
+    - echo no | avdmanager create avd -f -n vm22 -k "system-images;android-22;default;x86"
+    - ${ANDROID_HOME}/emulator/emulator -avd vm22 -no-window -no-audio &
+    - EMULATOR_PID=$!
+    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim ; then break ; fi; sleep 5; done
+    - adb -e shell getprop init.svc.bootanim
+    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim | grep stopped ; then break ; fi; sleep 5; done
+    - adb -e shell getprop init.svc.bootanim | grep stopped
+    - for i in $(seq 60); do if adb -e shell pm list packages ; then break ; fi; sleep 5; done
+    - adb -e shell pm list packages
+    - for i in $(seq 10); do if adb -e shell input keyevent 82 ; then break; fi; sleep 5; done  # unlock device
+    - for i in $(seq 24); do if adb -e shell dumpsys power | grep mHoldingWakeLockSuspendBlocker=true ; then break; fi; sleep 5; done
+    - sleep 10
+    - ./gradlew connectedCheck
+    - kill $EMULATOR_PID
+    - while test -e /proc/$EMULATOR_PID; do sleep 1; done
+    - avdmanager delete avd -n vm22
+
+    - mv app/build/outputs/apk/release/app-release-unsigned.apk bluelineconsole-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk
+
+  artifacts:
+    paths:
+      - bluelineconsole-*.apk
+      - app/build/reports/androidTests/connected/
+      - app/build/reports/tests/testReleaseUnitTest/
+      - app/build/reports/lint-results.html
+    reports:
+       junit:
+         - app/build/test-results/**/TEST-*.xml
+         - app/build/outputs/androidTest-results/connected/*xml
+       
+
+signedBuildForRelease:
+  interruptible: true
+  stage: deploy
+  when: manual
+  timeout: 10 minutes
+  script:
+    - rm -f ./*.apk
+    - ./ci/gitlab-ci-version-check.sh
+    - ./gradlew build bundleRelease
+    - ./ci/license-checker.py
+    - xxd -r "$app_sign_key_jks_xxd" > app/build/key.jks
+    - ${ANDROID_HOME}/build-tools/${ANDROID_BUILD_TOOLS}/apksigner sign --ks app/build/key.jks --ks-key-alias "$app_sign_key_alias" --ks-pass pass:"$app_sign_key_jks_pass" --out bluelineconsole-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk app/build/outputs/apk/release/app-release-unsigned.apk
+    - jarsigner -keystore app/build/key.jks -storepass "$app_sign_key_jks_pass" app/build/outputs/bundle/release/app-release.aab "$app_sign_key_alias"
+    - rm app/build/key.jks
+    - mv app/build/outputs/bundle/release/app-release.aab bluelineconsole-$(grep versionName app/build.gradle |sed -e 's/^ *versionName "//' -e 's/"$//').aab
+
+  artifacts:
+    paths:
+      - bluelineconsole-*.apk
+      - bluelineconsole-*.aab
+      - app/build/outputs/mapping/release/mapping.txt
