--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,15 +11,6 @@
 image: ubuntu:20.04
 
 variables:
-
-  # ANDROID_COMPILE_SDK is the version of Android you're compiling with.
-  # It should match compileSdkVersion.
-  ANDROID_COMPILE_SDK: "31"
-
-  # ANDROID_BUILD_TOOLS is the version of the Android build tools you are using.
-  # It should match buildToolsVersion.
-  ANDROID_BUILD_TOOLS: "31.0.0"
-
   # It's what version of the command line tools we're going to download from the official site.
   # Official Site-> https://developer.android.com/studio/index.html
   # There, look down below at the cli tools only, sdk tools package is of format:
@@ -52,9 +43,11 @@ before_script:
 
   # use yes to accept all licenses
   - yes | sdkmanager --sdk_root=${ANDROID_HOME} --licenses || true
-  - sdkmanager --sdk_root=${ANDROID_HOME} "platforms;android-${ANDROID_COMPILE_SDK}"
+  - sdkmanager --sdk_root=${ANDROID_HOME} "platforms;android-$(grep 'compileSdk [1-9]' ./app/build.gradle | sed -e 's/^.*compileSdk //')"
   - sdkmanager --sdk_root=${ANDROID_HOME} "platform-tools"
+  - export ANDROID_BUILD_TOOLS=$(grep 'buildToolsVersion '\''[1-9]' "./app/build.gradle" | sed -e 's/^.*buildToolsVersion '\''//' -e 's/'\''$//')
   - sdkmanager --sdk_root=${ANDROID_HOME} "build-tools;${ANDROID_BUILD_TOOLS}"
+  - export PATH=$PATH:${ANDROID_HOME}/build-tools/${ANDROID_BUILD_TOOLS}/
 
 test:
   interruptible: true
@@ -63,54 +56,16 @@ test:
   script:
     - sed -i -e 's/        versionName "\(.*\)"/        versionName "\1-'$(date +%Y.%m%d.%H%M)'-'$(git rev-parse --short HEAD)'"/' app/build.gradle
 
-    - ./ci/gitlab-ci-version-check.sh
     - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
     - ./gradlew build bundleRelease
     - ./ci/license-checker.py
+    - ./ci/android-connectedcheck.sh
 
-    # x86 image is not provided for 30 or later, but at least on my end x86_64 image could not run on emulator command
-    - sdkmanager platform-tools emulator "system-images;android-29;default;x86"
-    - echo no | avdmanager create avd -f -n vm29 -k "system-images;android-29;default;x86"
-    - ${ANDROID_HOME}/emulator/emulator -avd vm29 -no-window -no-audio &
-    - EMULATOR_PID=$!
-    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim ; then break ; fi; sleep 5; done
-    - adb -e shell getprop init.svc.bootanim
-    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim | grep stopped ; then break ; fi; sleep 5; done
-    - adb -e shell getprop init.svc.bootanim | grep stopped
-    - for i in $(seq 60); do if adb -e shell pm list packages ; then break ; fi; sleep 5; done
-    - adb -e shell pm list packages
-    - for i in $(seq 10); do if adb -e shell input keyevent 82 ; then break; fi; sleep 5; done  # unlock device
-    - for i in $(seq 24); do if adb -e shell dumpsys power | grep mHoldingWakeLockSuspendBlocker=true ; then break; fi; sleep 5; done
-    - sleep 10
-    - ./gradlew connectedCheck
-    - kill $EMULATOR_PID
-    - while test -e /proc/$EMULATOR_PID; do sleep 1; done
-    - avdmanager delete avd -n vm29
-
-    # Minimum supported version: SDK22
-    - sdkmanager platform-tools emulator "system-images;android-22;default;x86"
-    - echo no | avdmanager create avd -f -n vm22 -k "system-images;android-22;default;x86"
-    - ${ANDROID_HOME}/emulator/emulator -avd vm22 -no-window -no-audio &
-    - EMULATOR_PID=$!
-    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim ; then break ; fi; sleep 5; done
-    - adb -e shell getprop init.svc.bootanim
-    - for i in $(seq 60); do if adb -e shell getprop init.svc.bootanim | grep stopped ; then break ; fi; sleep 5; done
-    - adb -e shell getprop init.svc.bootanim | grep stopped
-    - for i in $(seq 60); do if adb -e shell pm list packages ; then break ; fi; sleep 5; done
-    - adb -e shell pm list packages
-    - for i in $(seq 10); do if adb -e shell input keyevent 82 ; then break; fi; sleep 5; done  # unlock device
-    - for i in $(seq 24); do if adb -e shell dumpsys power | grep mHoldingWakeLockSuspendBlocker=true ; then break; fi; sleep 5; done
-    - sleep 10
-    - ./gradlew connectedCheck
-    - kill $EMULATOR_PID
-    - while test -e /proc/$EMULATOR_PID; do sleep 1; done
-    - avdmanager delete avd -n vm22
-
-    - mv app/build/outputs/apk/release/app-release-unsigned.apk bluelineconsole-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk
+    - mv app/build/outputs/apk/release/app-release-unsigned.apk $CI_PROJECT_NAME-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk
 
   artifacts:
     paths:
-      - bluelineconsole-*.apk
+      - $CI_PROJECT_NAME-*.apk
       - app/build/reports/androidTests/connected/
       - app/build/reports/tests/testReleaseUnitTest/
       - app/build/reports/lint-results.html
@@ -127,17 +82,16 @@ signedBuildForRelease:
   timeout: 10 minutes
   script:
     - rm -f ./*.apk
-    - ./ci/gitlab-ci-version-check.sh
     - ./gradlew build bundleRelease
     - ./ci/license-checker.py
     - xxd -r "$app_sign_key_jks_xxd" > app/build/key.jks
-    - ${ANDROID_HOME}/build-tools/${ANDROID_BUILD_TOOLS}/apksigner sign --ks app/build/key.jks --ks-key-alias "$app_sign_key_alias" --ks-pass pass:"$app_sign_key_jks_pass" --out bluelineconsole-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk app/build/outputs/apk/release/app-release-unsigned.apk
+    - apksigner sign --ks app/build/key.jks --ks-key-alias "$app_sign_key_alias" --ks-pass pass:"$app_sign_key_jks_pass" --out $CI_PROJECT_NAME-$(grep versionName app/build.gradle | sed -e 's/^ *versionName "//' -e 's/"$//').apk app/build/outputs/apk/release/app-release-unsigned.apk
     - jarsigner -keystore app/build/key.jks -storepass "$app_sign_key_jks_pass" app/build/outputs/bundle/release/app-release.aab "$app_sign_key_alias"
     - rm app/build/key.jks
-    - mv app/build/outputs/bundle/release/app-release.aab bluelineconsole-$(grep versionName app/build.gradle |sed -e 's/^ *versionName "//' -e 's/"$//').aab
+    - mv app/build/outputs/bundle/release/app-release.aab $CI_PROJECT_NAME-$(grep versionName app/build.gradle |sed -e 's/^ *versionName "//' -e 's/"$//').aab
 
   artifacts:
     paths:
-      - bluelineconsole-*.apk
-      - bluelineconsole-*.aab
+      - $CI_PROJECT_NAME-*.apk
+      - $CI_PROJECT_NAME-*.aab
       - app/build/outputs/mapping/release/mapping.txt
