--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /.idea/deploymentTargetSelector.xml
 /.idea/other.xml
 /.idea/migrations.xml
+/.idea/androidTestResultsUserPreferences.xml
 .DS_Store
 /build
 /captures
