Drop connectedCheck on Android SDK24
It is not that some cases are not covered. The latest one covers it.

--- a/.github/workflows/android-connectedcheck.yml
+++ b/.github/workflows/android-connectedcheck.yml
@@ -13,8 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        # Not sure, API level 24 looks like some threshold for UI testing
-        api-level: [22, 24, 35]
+        api-level: [22, 35]
 
     steps:
       - name: checkout
