Remove whole .idea and add to .gitignore
It was annoying to obey everytime

--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,7 @@
 *.ser
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/.idea/compiler.xml
-/.idea/jarRepositories.xml
-/.idea/deploymentTargetDropDown.xml
-/.idea/misc.xml
-/.idea/vcs.xml
-/.idea/shelf
-/.idea/modules.xml
-/.idea/deploymentTargetSelector.xml
-/.idea/other.xml
-/.idea/migrations.xml
-/.idea/androidTestResultsUserPreferences.xml
+/.idea/
 .DS_Store
 /build
 /captures
